Add stuff I didn't push earlier

--- a/modeling.ipynb
+++ b/modeling.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -101,115 +101,96 @@
        "      <th>non_violent_rate</th>\n",
        "      <th>deaths_per_100k</th>\n",
        "      <th>deaths_per_100mil_miles</th>\n",
-       "      <th>label</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>policy_amt</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.99</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>------</td>\n",
+       "      <td>0.995</td>\n",
+       "      <td>------</td>\n",
+       "      <td>------</td>\n",
+       "      <td>------</td>\n",
+       "      <td>------</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>csl_amt</th>\n",
-       "      <td>0.99</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>0.995</td>\n",
+       "      <td>------</td>\n",
+       "      <td>------</td>\n",
+       "      <td>------</td>\n",
+       "      <td>------</td>\n",
+       "      <td>------</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>violent_rate</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>------</td>\n",
+       "      <td>------</td>\n",
+       "      <td>------</td>\n",
+       "      <td>0.848</td>\n",
+       "      <td>0.697</td>\n",
+       "      <td>0.723</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>non_violent_rate</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.85</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>------</td>\n",
+       "      <td>------</td>\n",
+       "      <td>0.848</td>\n",
+       "      <td>------</td>\n",
+       "      <td>0.827</td>\n",
+       "      <td>0.727</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>deaths_per_100k</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.70</td>\n",
-       "      <td>0.83</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.96</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>------</td>\n",
+       "      <td>------</td>\n",
+       "      <td>0.697</td>\n",
+       "      <td>0.827</td>\n",
+       "      <td>------</td>\n",
+       "      <td>0.962</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>deaths_per_100mil_miles</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0.72</td>\n",
-       "      <td>0.73</td>\n",
-       "      <td>0.96</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>label</th>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
+       "      <td>------</td>\n",
+       "      <td>------</td>\n",
+       "      <td>0.723</td>\n",
+       "      <td>0.727</td>\n",
+       "      <td>0.962</td>\n",
+       "      <td>------</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                         policy_amt  csl_amt  violent_rate  non_violent_rate  \\\n",
-       "policy_amt                      NaN     0.99           NaN               NaN   \n",
-       "csl_amt                        0.99      NaN           NaN               NaN   \n",
-       "violent_rate                    NaN      NaN           NaN              0.85   \n",
-       "non_violent_rate                NaN      NaN          0.85               NaN   \n",
-       "deaths_per_100k                 NaN      NaN          0.70              0.83   \n",
-       "deaths_per_100mil_miles         NaN      NaN          0.72              0.73   \n",
-       "label                           NaN      NaN           NaN               NaN   \n",
+       "                        policy_amt csl_amt violent_rate non_violent_rate  \\\n",
+       "policy_amt                  ------   0.995       ------           ------   \n",
+       "csl_amt                      0.995  ------       ------           ------   \n",
+       "violent_rate                ------  ------       ------            0.848   \n",
+       "non_violent_rate            ------  ------        0.848           ------   \n",
+       "deaths_per_100k             ------  ------        0.697            0.827   \n",
+       "deaths_per_100mil_miles     ------  ------        0.723            0.727   \n",
        "\n",
-       "                         deaths_per_100k  deaths_per_100mil_miles  label  \n",
-       "policy_amt                           NaN                      NaN    NaN  \n",
-       "csl_amt                              NaN                      NaN    NaN  \n",
-       "violent_rate                        0.70                     0.72    NaN  \n",
-       "non_violent_rate                    0.83                     0.73    NaN  \n",
-       "deaths_per_100k                      NaN                     0.96    NaN  \n",
-       "deaths_per_100mil_miles             0.96                      NaN    NaN  \n",
-       "label                                NaN                      NaN    NaN  "
+       "                        deaths_per_100k deaths_per_100mil_miles  \n",
+       "policy_amt                       ------                  ------  \n",
+       "csl_amt                          ------                  ------  \n",
+       "violent_rate                      0.697                   0.723  \n",
+       "non_violent_rate                  0.827                   0.727  \n",
+       "deaths_per_100k                  ------                   0.962  \n",
+       "deaths_per_100mil_miles           0.962                  ------  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "# For my thid party feature, see if they are self correlated\n",
-    "\n",
+    "import numpy as np\n",
     "x = df.corr(numeric_only=True)\n",
-    "columns_for_corr = [\"policy_amt\", \"csl_amt\", \"violent_rate\", \"non_violent_rate\", \"deaths_per_100k\", \"deaths_per_100mil_miles\", \"label\"]\n",
-    "x.where((x > 0.5) & (x < 1)).loc[columns_for_corr, columns_for_corr].round(2)"
+    "columns_for_corr = [\"policy_amt\", \"csl_amt\", \"violent_rate\", \"non_violent_rate\", \"deaths_per_100k\", \"deaths_per_100mil_miles\"]\n",
+    "x.where((x > 0.5) & (x < 1)).loc[columns_for_corr, columns_for_corr].round(3).replace(np.nan, '------', regex=True)"
    ]
   },
   {
